--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,21 +8,24 @@
     tools:context=".MainActivity">
 
     <RadioGroup
+        android:id="@+id/rg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
         <RadioButton
+            android:id="@+id/rbLike"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="J'aime" />
+            android:text="J'aime"/>
 
         <RadioButton
+            android:id="@+id/rbDislike"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:text="Je n'aime pas" />
+            android:text="Je n'aime pas"/>
     </RadioGroup>
 
     <LinearLayout
@@ -34,7 +36,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Complément" />
+            android:text="Complément"/>
 
         <EditText
             android:id="@+id/et"
@@ -43,14 +45,15 @@
             android:layout_weight="1"
             android:ems="10"
             android:hint="Saisir nom ici"
-            android:minHeight="48dp" />
+            android:minHeight="48dp"/>
     </LinearLayout>
 
     <ImageView
+        android:id="@+id/iv"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        app:srcCompat="@mipmap/ic_launcher" />
+        app:srcCompat="@mipmap/ic_launcher"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,15 +66,14 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="Annuler" />
+            android:text="Annuler"/>
 
         <Button
-            android:id="@+id/btValider"
+            android:id="@+id/btValidate"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:text="Valider" />
+            android:text="Valider"/>
     </LinearLayout>
-
 </LinearLayout>
